force-app/main/default/objects/blood_request__c/blood_request__c.object-meta.xml
<CustomObject>
    <description>details of patients who require blood</description>
    <label>blood request</label>
    <nameField>
        <label>blood request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>blood requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>