force-app/main/default/objects/blood_request__c/fields/applicant__c.field-meta.xml
<CustomField>
    <fullName>applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>applicant</label>
    <referenceTo>applicants__c</referenceTo>
    <relationshipLabel>blood requests</relationshipLabel>
    <relationshipName>blood_requests</relationshipName>
    <type>Lookup</type>
</CustomField>