force-app/main/default/objects/blood_request__c/fields/attender_contact_NO__c.field-meta.xml
<CustomField>
    <fullName>attender_contact_NO__c</fullName>
    <description>phone number of the attender</description>
    <label>attender contact NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>