force-app/main/default/objects/blood_request__c/fields/attender_email__c.field-meta.xml
<CustomField>
    <fullName>attender_email__c</fullName>
    <label>attender email</label>
    <type>Email</type>
</CustomField>