force-app/main/default/objects/blood_request__c/fields/attender_name__c.field-meta.xml
<CustomField>
    <fullName>attender_name__c</fullName>
    <description>enter the person name who is requesting blood for the patient</description>
    <label>attender name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>