force-app/main/default/objects/blood_request__c/fields/blood_reqest_ID__c.field-meta.xml
<CustomField>
    <fullName>blood_reqest_ID__c</fullName>
    <displayFormat>BR-{000}</displayFormat>
    <externalId>true</externalId>
    <label>blood reqest ID</label>
    <type>AutoNumber</type>
</CustomField>