force-app/main/default/objects/blood_request__c/fields/district__c.field-meta.xml
<CustomField>
    <fullName>district__c</fullName>
    <label>district</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>STATE_TERRITORY__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>district</valueSetName>
    </valueSet>
</CustomField>