force-app/main/default/objects/blood_request__c/fields/hospital_address__c.field-meta.xml
<CustomField>
    <fullName>hospital_address__c</fullName>
    <label>hospital address</label>
    <type>TextArea</type>
</CustomField>