force-app/main/default/objects/blood_request__c/fields/hospital_name__c.field-meta.xml
<CustomField>
    <fullName>hospital_name__c</fullName>
    <label>hospital name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>