force-app/main/default/objects/blood_request__c/fields/nfature_of_treatment__c.field-meta.xml
<CustomField>
    <fullName>nfature_of_treatment__c</fullName>
    <label>nature of treatment</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>