force-app/main/default/objects/blood_request__c/fields/no_of_units__c.field-meta.xml
<CustomField>
    <fullName>no_of_units__c</fullName>
    <description>how much blood the patient requires in units</description>
    <label>no of units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>