force-app/main/default/objects/blood_request__c/fields/patient_name__c.field-meta.xml
<CustomField>
    <fullName>patient_name__c</fullName>
    <description>name of the patient who needs blood</description>
    <label>patient name</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>