force-app/main/default/objects/blood_request__c/fields/STATE_TERRITORY__c.field-meta.xml
<CustomField>
    <fullName>STATE_TERRITORY__c</fullName>
    <label>STATE TERRITORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>STATE_TERRITORY</valueSetName>
    </valueSet>
</CustomField>