force-app/main/default/objects/blood_request__c/validationRules/contact_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>contact_not_blank</fullName>
    <active>true</active>
    <description>If attender name is present the contact number should not be blank</description>
    <errorConditionFormula>NOT(ISBLANK( attender_name__c ))  &amp;&amp; ISBLANK( attender_contact_NO__c )</errorConditionFormula>
    <errorMessage>the contact number should not be blank</errorMessage>
</ValidationRule>