force-app/main/default/objects/blood_request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>blood_reqest_ID__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>